--- a/www/registro.html
+++ b/www/registro.html
@@ -78,9 +78,9 @@
 
                             <input type="password" name="contactNameField" value="" class="contactField" id="CONFIRMA_SENHA" placeholder="Confirme sua senha" required />
 
-                            <label class="input-label">Moeda base</label>
+                            <!--<label class="input-label">Moeda base</label>
 
-                            <select name="" class="contactField" id="SUA_MOEDA"></select>
+                            <select name="" class="contactField" id="SUA_MOEDA"></select>-->
 
                         </fieldset>
                     </div>
