--- a/www/estabelecimento.html
+++ b/www/estabelecimento.html
@@ -11,9 +11,6 @@
 </head>
 <body>
     <div id="content" class="page-content">
-        <script>
-            var ID_ESTABELECIMENTO = 'TESTE DE QUERYSTRING';
-        </script>
         <div class="header">
             <a class="open-nav" href="#"><i class="fa fa-navicon"></i></a>
             <a class="header-logo">eXCHANGE</a>
@@ -41,61 +38,63 @@
         </div>
         <br />
         <br />
-        <div id="DIVESTABELECIMENTO" class="container">
+        <div class="container">
             <div class="content">
                 <div class="container no-bottom">
                     <div class="no-bottom">
                         <fieldset>
-                            <div class="big-notification static-notification-white">
-                                <strong><label class="busca-text"> Nome do estabelecimento muito grande ltda </label></strong>
-                                <div class="one-half">
-                                    <label class="contact-text"> telefone </label>
-                                    <label class="contact-text">R$: 4,00</label>
+                            <div id="DIVESTABELECIMENTO">
+                                <!--<div class="big-notification static-notification-white">
+                                    <strong><label class="busca-text"> Nome do estabelecimento muito grande ltda </label></strong>
+                                    <div class="one-half">
+                                        <label class="contact-text"> telefone </label>
+                                        <label class="contact-text">R$: 4,00</label>
+                                    </div>
+                                    <div class="two-half last-column">
+                                        <span class="span-stars">
+                                            <i class="fa fa-star"></i>
+                                            <i class="fa fa-star"></i>
+                                            <i class="fa fa-star"></i>
+                                            <i class="fa fa-star"></i>
+                                            <i class="fa fa-star-o"></i>
+                                        </span>
+                                        <label class="contact-text">0.6 km</label>
+                                    </div>
                                 </div>
-                                <div class="two-half last-column">
-                                    <span class="span-stars">
-                                        <i class="fa fa-star"></i>
-                                        <i class="fa fa-star"></i>
-                                        <i class="fa fa-star"></i>
-                                        <i class="fa fa-star"></i>
-                                        <i class="fa fa-star-o"></i>
-                                    </span>
-                                    <label class="contact-text">0.6 km</label>
+                                <div class="big-notification static-notification-white">
+                                    <strong><label class="busca-text"> Nome do estabelecimento muito grande ltda </label></strong>
+                                    <div class="one-half">
+                                        <label class="contact-text"> telefone </label>
+                                        <label class="contact-text">R$: 4,00</label>
+                                    </div>
+                                    <div class="two-half last-column">
+                                        <span class="span-stars">
+                                            <i class="fa fa-star"></i>
+                                            <i class="fa fa-star"></i>
+                                            <i class="fa fa-star"></i>
+                                            <i class="fa fa-star"></i>
+                                            <i class="fa fa-star-o"></i>
+                                        </span>
+                                        <label class="contact-text">0.6 km</label>
+                                    </div>
                                 </div>
-                            </div>
-                            <div class="big-notification static-notification-white">
-                                <strong><label class="busca-text"> Nome do estabelecimento muito grande ltda </label></strong>
-                                <div class="one-half">
-                                    <label class="contact-text"> telefone </label>
-                                    <label class="contact-text">R$: 4,00</label>
-                                </div>
-                                <div class="two-half last-column">
-                                    <span class="span-stars">
-                                        <i class="fa fa-star"></i>
-                                        <i class="fa fa-star"></i>
-                                        <i class="fa fa-star"></i>
-                                        <i class="fa fa-star"></i>
-                                        <i class="fa fa-star-o"></i>
-                                    </span>
-                                    <label class="contact-text">0.6 km</label>
-                                </div>
-                            </div>
-                            <div class="big-notification static-notification-white">
-                                <strong><label class="busca-text"> Nome do estabelecimento muito grande ltda </label></strong>
-                                <div class="one-half">
-                                    <label class="contact-text"> telefone </label>
-                                    <label class="contact-text">R$: 4,00</label>
-                                </div>
-                                <div class="two-half last-column">
-                                    <span class="span-stars">
-                                        <i class="fa fa-star"></i>
-                                        <i class="fa fa-star"></i>
-                                        <i class="fa fa-star"></i>
-                                        <i class="fa fa-star"></i>
-                                        <i class="fa fa-star-o"></i>
-                                    </span>
-                                    <label class="contact-text">0.6 km</label>
-                                </div>
+                                <div class="big-notification static-notification-white">
+                                    <strong><label class="busca-text"> Nome do estabelecimento muito grande ltda </label></strong>
+                                    <div class="one-half">
+                                        <label class="contact-text"> telefone </label>
+                                        <label class="contact-text">R$: 4,00</label>
+                                    </div>
+                                    <div class="two-half last-column">
+                                        <span class="span-stars">
+                                            <i class="fa fa-star"></i>
+                                            <i class="fa fa-star"></i>
+                                            <i class="fa fa-star"></i>
+                                            <i class="fa fa-star"></i>
+                                            <i class="fa fa-star-o"></i>
+                                        </span>
+                                        <label class="contact-text">0.6 km</label>
+                                    </div>
+                                </div>-->
                             </div>
                         </fieldset>
                     </div>
