--- a/www/mapa.html
+++ b/www/mapa.html
@@ -18,7 +18,7 @@
         <div class="header">
             <a class="open-nav" href="#"><i class="fa fa-navicon"></i></a>
             <a class="header-logo">eXCHANGE</a>
-            <a onclick="CarregaMenu('cotacao.html')"><i class="fa fa-arrow-left"></i></a>
+            <a class="open-nav" href="#"><i class="fa fa-arrow-left"></i></a>
         </div>
         <!--<div class="header-clear"></div>-->
         <!--<div class="decoration"></div>-->
