--- a/www/inicio.html
+++ b/www/inicio.html
@@ -17,7 +17,7 @@
     <title>COTACAO</title>
     <!--CSS DE ESTILOS-->
 
-	 <!--<script type="text/javascript" src="cordova.js"></script>-->
+	 <script type="text/javascript" src="cordova.js"></script>
 	
     <link href="styles/style.css" rel="stylesheet" type="text/css">
     <link href="styles/framework.css" rel="stylesheet" type="text/css">
