--- a/www/index.html
+++ b/www/index.html
@@ -26,7 +26,7 @@
 
     <script type="text/javascript" src="cordova.js"></script>
     <!--SCRIPTS BASICOS-->
-    <script src="scripts/jquery-2.1.4.js"></script>
+    <script type="text/javascript" src="scripts/jquery-2.1.4.js"></script>
     <script type="text/javascript" src="scripts/jqueryui.js"></script>
     <script type="text/javascript" src="scripts/framework.plugins.js"></script>
     <script type="text/javascript" src="scripts/custom.js"></script>
