--- a/www/inicio.html
+++ b/www/inicio.html
@@ -17,8 +17,8 @@
     <title>COTACAO</title>
     <!--CSS DE ESTILOS-->
 
-	 <script type="text/javascript" src="cordova.js"></script>
-	
+    <script type="text/javascript" src="cordova.js"></script>
+
     <link href="styles/style.css" rel="stylesheet" type="text/css">
     <link href="styles/framework.css" rel="stylesheet" type="text/css">
     <link href="styles/owl.carousel.css" rel="stylesheet" type="text/css">
@@ -35,13 +35,14 @@
     <script type="text/javascript" src="scripts/custom.js"></script>
     <script type="text/javascript" src="scripts/jsmodel/wscotacao.js"></script>
 
-    
+
     <!--SCRIPTS DE PÁGINAS-->
-    
+
     <script type="text/javascript" src="scripts/paginas/inicio.js"></script>
     <script type="text/javascript" src="scripts/paginas/rss.js"></script>
     <script type="text/javascript" src="scripts/paginas/cotacao.js"></script>
     <script type="text/javascript" src="scripts/paginas/configrss.js"></script>
+
 
 
 
@@ -89,7 +90,7 @@
                     <a onclick="CarregaMenu('estabelecimento.html')" class="nav-item">
                         <i class="fa fa-search"></i>
                         Busca
-                        <i class="fa" ></i>
+                        <i class="fa"></i>
                     </a>
                 </div>
                 <!--<div class="sidebar-decoration"></div>-->
@@ -118,15 +119,38 @@
                 </div>
                 <!--<div class="sidebar-decoration"></div>-->
                 <div class="navigation-item">
-                    <a href="#" class="close-nav nav-item">
+                    <a onclick="CarregaMenu('avaliacoes.html')" class="close-nav nav-item">
                         <i class="fa fa-area-chart"></i>
                         Avaliações
                         <i class="fa"></i>
                     </a>
                 </div>
+                <div id="ADMINAREA">
+                    <div class="navigation-item">
+                        <a onclick="CarregaMenu('estabelecimentos.html')" class="nav-item">
+                            <i class="fa fa-clock-o"></i>
+                            Pesquisa Estabelecimento
+                            <i class="fa"></i>
+                        </a>
+                    </div>
+                    <div class="navigation-item">
+                        <a onclick="CarregaMenu('novoestabelecimento.html')" class="nav-item">
+                            <i class="fa fa-clock-o"></i>
+                            Cadastra Estabelecimento
+                            <i class="fa"></i>
+                        </a>
+                    </div>
+                    <div class="navigation-item">
+                        <a onclick="CarregaMenu('configestabelecimento.html')" class="nav-item">
+                            <i class="fa fa-clock-o"></i>
+                            Configura Estabelecimento
+                            <i class="fa"></i>
+                        </a>
+                    </div>
+                </div>
                 <div class="sidebar-breadcrumb">
-                <br />
-                <br />
+                    <br />
+                    <br />
                     <br />
                     <br />
                 </div>
