--- a/www/inicio.html
+++ b/www/inicio.html
@@ -39,11 +39,9 @@
     <!--SCRIPTS DE PÁGINAS-->
 
     <script type="text/javascript" src="scripts/paginas/inicio.js"></script>
-    <script type="text/javascript" src="scripts/paginas/rss.js"></script>
+    <!--<script type="text/javascript" src="scripts/paginas/rss.js"></script>
     <script type="text/javascript" src="scripts/paginas/cotacao.js"></script>
-    <script type="text/javascript" src="scripts/paginas/configrss.js"></script>
-
-
+    <script type="text/javascript" src="scripts/paginas/configrss.js"></script>-->
 
 
 
@@ -102,13 +100,13 @@
                     </a>
                 </div>
                 <!--<div class="sidebar-decoration"></div>-->
-                <div class="navigation-item">
+                <!--<div class="navigation-item">
                     <a onclick="CarregaMenu('endereco.html')" class="nav-item">
                         <i class="fa fa-building"></i>
                         Endereço
                         <i class="fa"></i>
                     </a>
-                </div>
+                </div>-->
                 <!--<div class="sidebar-decoration"></div>-->
                 <div class="navigation-item">
                     <a onclick="CarregaMenu('historico.html')" class="nav-item">
