--- a/www/novoestabelecimento.html
+++ b/www/novoestabelecimento.html
@@ -15,57 +15,30 @@
             <a class="header-logo">eXCHANGE</a>
             <a onclick="Grava();"><i class="fa fa-check"></i></a>
         </div>
-
+        <div class="header-clear-small"></div>
         <div class="content">
             <div class="container no-bottom">
                 <div class="no-bottom">
                     <div>
                         <fieldset>
                             <label class="input-label">Cadastro de Estabelecimentos</label>
-                            <input type="text" name="contactNameField" value="" class="contactField" id="NOME" placeholder="Nome do estabelecimento" required />
+                            <input type="text" name="contactNameField" value="" class="contactField"  id="NOME" placeholder="Nome fantasia" required />
                             <input type="text" name="contactNameField" value="" class="contactField " id="RAZAO_SOCIAL" placeholder="Razão Social" required />
                             <input type="text" name="contactNameField" value="" class="contactField " id="EMAIL" placeholder="E-mail" required />
                             <input type="text" name="contactNameField" value="" class="contactField " id="FONE" placeholder="Telefone" required />
-                            <input type="text" name="contactNameField" value="" class="contactField " id="ENDERECO" placeholder="Logradouro do estabelecimento" required />
+                            <input type="text" name="contactNameField" value="" class="contactField " id="ENDERECO" placeholder="Logradouro" required />
+                            <input type="text" name="contactNameField" value="" class="contactField " id="NUMERO" placeholder="Número" required />
+                            <input type="text" name="contactNameField" value="" class="contactField " id="COMPLEMENTO" placeholder="Complemento" required />
                             <input type="text" name="contactNameField" value="" class="contactField " id="BAIRRO" placeholder="Bairro" required />
                             <input type="text" name="contactNameField" value="" class="contactField " id="CIDADE" placeholder="Cidade" required />
                             <input type="text" name="contactNameField" value="" class="contactField " id="UF" placeholder="UF" required />
                             <input type="text" name="contactNameField" value="" class="contactField " id="CNPJ" placeholder="CNPJ" required />
-                            <input type="email" name="contactNameField" value="" class="contactField " id="CEP" placeholder="CEP" required />
+                           <input type="email" name="contactNameField" value=""class="contactField "  id="CEP" placeholder="CEP" required />
                         </fieldset>
                     </div>
                 </div>
             </div>
         </div>
-        <br />
-        <br />
-        <div class="content">
-            <div class="container no-bottom">
-                <div class="no-bottom">
-                    <div>
-                        <fieldset>
-                            <input type="text" name="contactNameField" value="" class="contactField " id="LATITUDE" placeholder="Latitude" required />
-                            <input type="text" name="contactNameField" value="" class="contactField " id="LONGITUDE" placeholder="Longitude" required />
-                        </fieldset>
-                    </div>
-                </div>
-                <br />
-                <a onclick="RecuperaGeolocalizacao();" class="button  button-white"><i class="fa-search"></i></a>
-            </div>
-        </div>
-        <div class="content" id="MOEDAS_TRABALHADAS">
-            <div class="container no-bottom">
-                <div class="no-bottom">
-                    <div>
-                        <fieldset>
-                            <label class="input-label">Moedas trabalhadas</label>
-                            <select name="" class="contactField" id="MOEDA"></select>
-                        </fieldset>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!--<script type="text/javascript" src="scripts/paginas/configestabelecimento.js"></script>-->
         <script type="text/javascript" src="scripts/paginas/novoestabelecimento.js"></script>
     </div>
 </body>
