--- a/www/perfil.html
+++ b/www/perfil.html
@@ -16,10 +16,7 @@
             <a class="header-logo">eXCHANGE</a>
             <a onclick="BuscarEstabelecimento(jQuery('#MOEDA_PROCURA').val());"><i class="fa fa-search"></i></a>
         </div>
-        <br />
-        <br />
-        <br />
-        <br />
+<div class="header-clear-small"></div>
         <div class="content">
             <div class="container no-bottom">
                 <div class="no-bottom">
