--- a/www/estabelecimento.html
+++ b/www/estabelecimento.html
@@ -14,7 +14,7 @@
         <div class="header">
             <a class="open-nav" href="#"><i class="fa fa-navicon"></i></a>
             <a class="header-logo">eXCHANGE</a>
-            <a onclick="BuscarEstabelecimento(jQuery('#MOEDA_PROCURA').val());"><i class="fa fa-search"></i></a>
+            <a onclick="BuscarTeste();"><i class="fa fa-search"></i></a>
         </div>
         <br />
         <br />
@@ -54,16 +54,7 @@
         <script src="scripts/jsmodel/moedas.js"></script>
         <script src="scripts/jsmodel/transacao.js"></script>
         <script src="scripts/paginas/estabelecimento.js"></script>
-        <script>
-            jQuery(document).ready(function () {
-
-                PreencheSelectSuaMoeda();
-                PreencheSelectMoedaProcura();
-                PreencheTransacaoProcura();
-                verificaPosicao();
-
-            });
-        </script>
+        
     </div>
 </body>
 
