--- a/www/mapas.html
+++ b/www/mapas.html
@@ -56,7 +56,7 @@
 
         function onLocationFound(e) {
            // var ID_ESTABELECIMENTO = 'TESTE DE QUERYSTRING';
-            var radius = e.accuracy / 2;
+            var radius = 10;// e.accuracy / 2;
             L.marker(e.latlng).addTo(map).bindPopup("Você está aqui!").openPopup();
             CarregaEstabelecimentos();
             map.panTo(new L.LatLng(e.latlng.lat, e.latlng.lng));
@@ -67,7 +67,7 @@
          var lat =   localStorage.getItem('latitude');
          var long = localStorage.getItem('longitude');
 
-         var radius = e.accuracy / 2;
+         var radius = 10;//e.accuracy / 2;
          L.marker([lat,long]).addTo(map).bindPopup("Localização Inicial").openPopup();
          CarregaEstabelecimentos();
          map.panTo(new L.LatLng(lat, long));
@@ -82,7 +82,6 @@
             if (data.length > 0) {
                 jQuery.each(data, function () {
                     if (this.LATITUDE != null  && this.LONGITUDE != null) {
-                        // L.marker([this.LATITUDE, this.LONGITUDE]).addTo(map).bindPopup(MontaMapa(this));
                         MontaMapa(this);
                     }
                 });
@@ -90,11 +89,8 @@
         }
 
         function MontaMapa(data) {
-
             //L.marker([data.LATITUDE, data.LONGITUDE]).addTo(map).bindPopup("<iframe id='FRMCONTATO' src='pg_contato.html?ID_ESTABELECIMENTO=" + data.ID_ESTABELECIMENTO + "' class='' height='260'  weight='200' frameBorder='0'></iframe>");
-            L.circle([data.LATITUDE, data.LONGITUDE], 120, { color: 'red', fillColor: '#f03', fillOpacity: 0.5 }).addTo(map).bindPopup("<iframe id='FRMCONTATO' src='pg_contato.html?ID_ESTABELECIMENTO=" + data.ID_ESTABELECIMENTO + "' class='' height='260'  weight='200' frameBorder='0'></iframe>");
-
-
+            L.circle([data.LATITUDE, data.LONGITUDE], 10, { color: 'red', fillColor: '#f03', fillOpacity: 0.5 }).addTo(map).bindPopup("<iframe id='FRMCONTATO' src='pg_contato.html?ID_ESTABELECIMENTO=" + data.ID_ESTABELECIMENTO + "' class='' height='260'  weight='200' frameBorder='0'></iframe>");
         }
 
         //jQuery(document).ready(function () {
