--- a/www/estabelecimento.html
+++ b/www/estabelecimento.html
@@ -14,12 +14,8 @@
         <div class="header">
             <a class="open-nav" href="#"><i class="fa fa-navicon"></i></a>
             <a class="header-logo">eXCHANGE</a>
-            <a onclick="BuscarTeste();"><i class="fa fa-search"></i></a>
+            <a onclick="BuscarEstabelecimento(1);"><i class="fa fa-search"></i></a>
         </div>
-        <br />
-        <br />
-        <br />
-        <br />
         <!--<div class="decoration"></div>-->
         <div class="content">
             <div class="container no-bottom">
@@ -29,7 +25,7 @@
                         <!--<label class="input-label">Sua moeda</label>-->
                         <select name="" class="contactField" id="SUA_MOEDA"></select>
                         <!--<label class="input-label">Qual procura?</label>-->
-                        <select name="" class="contactField" id="MOEDA_PROCURA"></select>
+                        <!--<select name="" class="contactField" id="MOEDA_PROCURA"></select>-->
                         <!--<label class="input-label">Qual é a transação?</label>-->
                         <select name="" class="contactField" id="TRANSACAO"></select>
                     </fieldset>
@@ -38,7 +34,6 @@
         </div>
         <br />
         <br />
-        <div  class="container">
             <div class="content">
                 <div class="container no-bottom">
                     <div class="no-bottom">
@@ -50,7 +45,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+      
         <script src="scripts/jsmodel/moedas.js"></script>
         <script src="scripts/jsmodel/transacao.js"></script>
         <script src="scripts/paginas/estabelecimento.js"></script>
