--- a/www/estabelecimento.html
+++ b/www/estabelecimento.html
@@ -16,11 +16,11 @@
             <a class="header-logo">eXCHANGE</a>
             <a onclick="BuscarEstabelecimento(1);"><i class="fa fa-search"></i></a>
         </div>
-        <!--<div class="decoration"></div>-->
+        <div class="header-clear-small"></div>
         <div class="content">
             <div class="container no-bottom">
                 <div class="no-bottom">
-                    <fieldset>
+                    <!--<fieldset>-->
                         <label class="input-label">Busca</label>
                         <!--<label class="input-label">Sua moeda</label>-->
                         <select name="" class="contactField" id="SUA_MOEDA"></select>
@@ -28,7 +28,7 @@
                         <!--<select name="" class="contactField" id="MOEDA_PROCURA"></select>-->
                         <!--<label class="input-label">Qual é a transação?</label>-->
                         <select name="" class="contactField" id="TRANSACAO"></select>
-                    </fieldset>
+                    <!--</fieldset>-->
                 </div>
             </div>
         </div>
@@ -37,11 +37,11 @@
             <div class="content">
                 <div class="container no-bottom">
                     <div class="no-bottom">
-                        <fieldset>
+                        <!--<fieldset>-->
                             <div id="DIVESTABELECIMENTO">
 
                             </div>
-                        </fieldset>
+                        <!--</fieldset>-->
                     </div>
                 </div>
             </div>
