--- a/www/pefilestabelecimento.html
+++ b/www/pefilestabelecimento.html
@@ -20,10 +20,10 @@
             <div class="container no-bottom">
                 <div class="no-bottom">
                     <div>
-                        <fieldset>
-                            <label class="input-label">Configurações</label>
+                        <!--<fieldset>-->
+                            <label class="input-label">Perfil Estabelecimento</label>
                             <select name="ESTABELECIMENTO" class="contactField" id="ESTABELECIMENTO" onchange="RetornaEstabelecimento(jQuery('#ESTABELECIMENTO').val())"></select>
-                        </fieldset>
+                        <!--</fieldset>-->
                     </div>
                 </div>
             </div>
@@ -55,55 +55,18 @@
             <div class="container no-bottom">
                 <div class="no-bottom">
                     <div>
-                        <fieldset>
+                        <!--<fieldset>-->
                             <label class="input-label">Localização</label>
                             <input type="text" name="contactNameField" value="" class="contactField " id="LATITUDE" placeholder="Latitude" required readonly />
                             <input type="text" name="contactNameField" value="" class="contactField " id="LONGITUDE" placeholder="Longitude" required readonly />
-                        </fieldset>
+                        <!--</fieldset>-->
                     </div>
                 </div>
                 <a onclick="RecuperaGeolocalizacao();" class="button button-white">
                     <img src="images/Location_Navigation_Money_Finance_Bank_Cash_Dollar_Pin-512.png" width="24px" height="24px" />
                 </a>
             </div>
+            <script src="scripts/paginas/pefilestabelecimento.js"></script>
         </div>
-        <div class="content" id="MOEDAS">
-            <div class="container no-bottom">
-                <div class="no-bottom">
-                    <div>
-                        <fieldset>
-                            <!--<label class="input-label">Moedas trabalhadas</label>-->
-                            <select name="" class="contactField" id="MOEDA"></select>
-                            <!--<label class="input-label">Percentual de valoração</label>-->
-                            <input type="number" name="PERCENTUAL" value="" class="contactField" id="PERCENTUAL" placeholder="Percentual de valoração" required />
-                            <!--<label class="input-label">Status</label>-->
-                            <select name="STATUS" class="contactField" id="STATUS" >
-                                <option selected="selected">Status</option>
-                                <option>Ativo</option>
-                                <option>Desativado</option>
-                            </select>
-                        </fieldset>
-                    </div>
-                </div>
-            </div>
-            <div id='MOEDAS_TRABALHADAS'>
-            </div>
-            <div class="container no-bottom">
-                <div class="no-bottom">
-                    <div>
-                        <fieldset>
-                            <div id='MOEDAS_TRABALHADAS'>
-                            </div>
-                        </fieldset>
-                    </div>
-                </div>
-                <a  onclick="AdicionaMoeda();" class="button button-white">
-                    <img src="images/Location_Navigation_Money_Finance_Bank_Cash_Dollar_Pin-512.png" width="24px" height="24px" />
-                </a>
-            </div>
-            <script type="text/javascript" src="scripts/paginas/configestabelecimento.js"></script>
-            <script src="scripts/jsmodel/moedas.js"></script>
-        </div>
-
 </body>
 </html>
